# szCORE_challenge

./: .gitignore  README.md
gotman_1982-master/: Dockerfile
gotman_1982-master/gotman_1982/src/gotman_1982/: main.py
solution1_master/: CITATION.cff  README.md
solution1_master/labram_based_solution/: README.md  pyproject.toml
solution1_master/labram_based_solution/src/: run_labram_based_test.py
solution1_master/labram_based_solution/src/solution1/: main_labram_test.py  run_class_finetuning_sz_chlng_2025.py  solution1_labram.py  sz_metrics_test.py  utils.py
solution1_master/solution1/: README.md  pyproject.toml
solution1_master/solution1/src/: run_s1.py
solution1_master/solution1/src/solution1/: __init__.py  data_processing.py  main.py  main_wave.py  solution1_wave.py
